[package]
name = "vulkan-triangle"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.2"
rustfft = "6.1.0"
mp4 = "0.14.0"
ash = { version = "0.37.3" , features = ["linked"]}
ascii = "1.1.0"
log = { version = "0.4.20", features = [] }
paste = "1.0"
itertools = "0.12.0"
im = "15.1.0"
